# GPU-Pro-Books-Source-Code

./: README.md
GPU-Pro-1/02_Geometry Manipulation/04_PolygonalFunctionalHybrids/: Hybrids-extra-DIVX.avi  Thumbs.db
GPU-Pro-1/03_Rendering Techniques/03_AlphaBlendingasaPostProcess/: ReadMe.txt
GPU-Pro-1/04_Global Illumination/01_Fast, Stencil-Based Multiresolution Splatting for Indirect Illumination/: README.txt  glInterface.cpp  stencilMultiResSplatting.cpp  stencilMultiResSplatting.h  stencilMultiResSplatting.sln  stencilMultiResSplatting.vcproj
GPU-Pro-1/05_Image Space/05_Realistic Depth-of-Field in Post-Production/: readme.txt
GPU-Pro-1/05_Image Space/06_Real-Time Screen Space Cloud Lighting/: ScreenSpaceCloudLighting_2008.sln  SimpleSample.cpp  SimpleSample_2008.vcproj
GPU-Pro-1/06_Handheld Devices/: BUILD.txt  INPUT.txt
GPU-Pro-1/06_Handheld Devices/02_Touchscreen-based user interaction/: IntroducingPODTouch.txt
GPU-Pro-1/07_Shadows/04_Screen Space Soft Shadows/: ssssCodeSnippets.doc
GPU-Pro-2/02 Rendering/04 - Practical Morphological Antialiasing/: LICENSE.txt  README.html
GPU-Pro-2/04 Shadows/02 - Fast Soft Shadows via Adaptive Shadow Maps/: ReadMe.txt
GPU-Pro-2/05 Handheld Devices/: GPUProReadme.txt
GPU-Pro-3/01_Geometry Manipulation/03_Optimized Stadium Crowd Rendering/: Crowd-Info.plist  Crowd.sln  Crowd.vcproj  PostBuild.bat  ReadMe.txt
GPU-Pro-3/02_Rendering/01_Practical Elliptical Texture Filtering/: README.txt
GPU-Pro-3/02_Rendering/02_An Approximation to the Chapman Grazing-Incidence Function for Atmospheric Scattering/: raytracer.fs  raytracer.sbproj  raytracer.vs  readme.txt
GPU-Pro-3/02_Rendering/03_Volumetric Real-Time Water and Foam Rendering/: VRTWFR.sln  VRTWFR.vcproj  config.txt
GPU-Pro-3/03_Global Illumination/02_Screen-space Bent Cones A Practical Approach/: SSBentCones.pro  SSBentCones.sln  SSBentCones.vcproj  qmake_common_functions.pri
GPU-Pro-3/03_Global Illumination/03_Real-time Near-field Global Illumiantion based on a Voxel Model/: VoxelGI.sln  VoxelGI.vcproj
GPU-Pro-3/06_GPGPU/01_Volumetric transparency with per-pixel fragment lists/: Dxa.h  DxaVolTransRaster.cpp  DxaVolTransRaster.h  Particle.h  ThrowOnFail.cpp  ThrowOnFail.h  VolumetricTransparency11.aps  VolumetricTransparency11.cpp  VolumetricTransparency11_2010.sln  VolumetricTransparency11_2010.vcxproj  VolumetricTransparency11_2010.vcxproj.filters  irel.dump  readme.txt  resource.h
GPU-Pro-3/06_GPGPU/02_Practical Binary Surface and Solid Voxelization with Direct3D 11/: Demo.cpp  Demo.sln  Demo.vcxproj  Demo.vcxproj.filters  README.txt  Raycasting.hlsl  Rendering.hlsl  Voxelization.hlsl
GPU-Pro-3/06_GPGPU/03_Interactive Ray Tracing using the Compute Shader/: App.cpp  Framework.sln  Framework.vcproj  PBRT_LICENSE.TXT  README  Raytracer.aps  Raytracer.rc  conf.ini
GPU-Pro-4/01_Geometry/01_GPU Terrain Subdivision and Tessellation/: ReadMe.txt  TerrainTessellation.vcproj  TerrainTessellation.vcxproj  TerrainTessellation_VS2008.sln  TerrainTessellation_VS2010.sln
GPU-Pro-4/02_Rendering/06_Progressive Screen-space Multi-channel Surface Voxelization/: Progressive Voxelization VS2008.sln  README.txt  (+1 more)
GPU-Pro-5/01_Rendering/01_Per-pixel lists for single pass A-buffer/gpu/: CMakeLists.txt  abuffer.cpp  abuffer.h  benchmark.cpp  seethrough.cpp  sh_count.fp  sh_count.vp
GPU-Pro-5/01_Rendering/01_Per-pixel lists for single pass A-buffer/gpu/asppll/: asppll_build.fp  asppll_build.vp  asppll_clear.fp  asppll_clear.vp  asppll_render.fp  asppll_render.vp  dll.cpp  implementations.fp
GPU-Pro-6/04_Shadows/01_Practical Screen-Space Soft Shadows/GPU_Pro_SSSS/: CMakeLists.txt  browser.cpp  browser.h  browser_callbacks_impl.h  debug_draw.h  fixed_pos.h  framework.h  intersection.h  octree.h  readme.txt  ssss.cpp
GPU-Pro-6/04_Shadows/01_Practical Screen-Space Soft Shadows/GPU_Pro_SSSS/resources/mesh/: mesh0.mesh  mesh1.mesh  mesh10.mesh  mesh100.mesh  mesh101.mesh  mesh102.mesh  mesh103.mesh  mesh104.mesh  mesh105.mesh  mesh106.mesh  mesh107.mesh  mesh108.mesh  mesh109.mesh  mesh11.mesh  mesh110.mesh  mesh111.mesh  mesh112.mesh  mesh113.mesh  mesh114.mesh  mesh115.mesh  mesh116.mesh  mesh117.mesh  mesh118.mesh  mesh119.mesh  mesh12.mesh  mesh120.mesh  mesh121.mesh  mesh122.mesh  mesh123.mesh  mesh124.mesh  mesh125.mesh  mesh126.mesh  mesh127.mesh  mesh128.mesh  mesh129.mesh  mesh13.mesh  mesh130.mesh  mesh131.mesh  mesh132.mesh  mesh133.mesh  (+429 more)
GPU-Pro-6/04_Shadows/01_Practical Screen-Space Soft Shadows/GPU_Pro_SSSS/resources/ui/: callables.js  callbacks.js  ui.css  ui.html  ui.js
GPU-Pro-6/04_Shadows/01_Practical Screen-Space Soft Shadows/GPU_Pro_SSSS/resources/ui/css/custom-theme/: jquery-ui.css  jquery-ui.min.css  jquery-ui.structure.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css
GPU-Pro-6/04_Shadows/01_Practical Screen-Space Soft Shadows/GPU_Pro_SSSS/resources/ui/js/: jquery-ui.js  jquery-ui.min.js
GPU-Pro-6/04_Shadows/01_Practical Screen-Space Soft Shadows/GPU_Pro_SSSS/shaders/browser/: browser.ps  browser.vs
GPU-Pro-6/04_Shadows/01_Practical Screen-Space Soft Shadows/GPU_Pro_SSSS/shaders/ssss/: common.h  cubemap_debug.ps  cubemap_debug.vs  debug.ps  debug.vs  display.ps  gauss_blur.ps  gauss_blur.vs  gauss_blur2.ps  gauss_blur_common.h  gbuffer.ps  glsl_compute_light.cs  minfilter.vs  minfilter_point.ps  penumbra.ps  penumbra_minfilter.ps  point_shadow_gen.gs  point_shadow_gen.ps  point_shadow_gen.vs  spot_shadow_translucent_gen.ps  spot_shadow_translucent_gen.vs  translucent_lighting.ps  translucent_lighting.vs
GPU-Zen/03_Rendering/04_High Quality GPU-efficient Image Detail Manipulation/source/: CMakeLists.txt  bmp.cpp  bmp.h  idm.cpp
GPU-Zen/03_Rendering/04_High Quality GPU-efficient Image Detail Manipulation/source/ext/glad/include/glad/: glad.h
GPU-Zen/03_Rendering/04_High Quality GPU-efficient Image Detail Manipulation/source/ext/nanogui/lib/: nanogui.lib
GPU-Zen/03_Rendering/04_High Quality GPU-efficient Image Detail Manipulation/source/shaders/: elements.fs.glsl  original.gs.glsl  original.vs.glsl  perPatch.cs.glsl  render.gs.glsl
(+8838 files in other folders)
